--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Hello
   
   var cookie_url = "";
   
-  cookie_str.forEach(function(element) {
+  cookies_str.forEach(function(element) {
     document.write(element+"<br>"); 
   });
   
